water-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: water-app-ingress
spec:
  rules:
  - host: water-app.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: water-app
            port:
              number: 8080
